--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
       <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
       <meta http-equiv="Pragma" content="no-cache">
       <meta http-equiv="Expires" content="0">
+      <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+/>
+
   
     <title>Diksha vishwakarma</title>
-    <link
+    <!-- <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-/>
+/> -->
 
   </head>
   <body>
